Revert "merging this revert/demo to master"
This reverts commit b82222cb73018f52cbc77f0b4b02e4bdbac36f59.

--- a/bin/NewFile.properties
+++ b/bin/NewFile.properties
@@ -1,3 +1,3 @@
 <?xml version="1.0" encoding="UTF-8"?
 
-changed here in revert/demo and try to merge into master
+changed here in mybook and push to my_book bracnch
