R evert "i need to remove : lets see this change will be removed or not"
This reverts commit acd802d05da130844c80e78978d71ddda77d34e8.

--- a/bin/NewFile.properties
+++ b/bin/NewFile.properties
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?
 
 changed here in revert/demo and try to merge into master....from newfile and got
-second time changed ..."lets see this change will be removed or not"
+second time changed ...
