--- a/src/NewFile.properties
+++ b/src/NewFile.properties
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?
 
 changed here in revert/demo and try to merge into master....from newfile and got
-second time changed ..."lets see this change will be removed or not"
+second time changed ...
