--- a/src/NewFile.properties
+++ b/src/NewFile.properties
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?
 
-changed here in revert/demo and try to merge into master....from newfile and got
+changed here in revert/demo and try to merge into master.3/12/2022...from newfile and got
 second time changed ...
